--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.6",
@@ -20,6 +22,7 @@
     "react-dom": "^18",
     "react-redux": "^9.1.1",
     "redux": "^5.0.1",
+    "reselect": "^5.1.0",
     "sass": "^1.75.0"
   },
   "devDependencies": {
